--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.3
+  fpdart: ^1.2.0
+  supabase_flutter: ^2.12.0
+  flutter_bloc: ^9.1.1
+  get_it: ^9.2.0
+  shared_preferences: ^2.5.4
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
