--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get_it: ^9.2.0
   shared_preferences: ^2.5.4
   uuid: ^4.5.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
